# python-starter

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
tests/: test_main.py
